styles/globals.css
@tailwind base;
@tailwind components;

.cssfx-bar-wave {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-between;
  width: var(--width);
}

.cssfx-bar-wave span {
  width: calc(var(--width) / 4 * 3 / 4);
  height: var(--height);
  background-color: var(--color);
}

.cssfx-bar-wave span:nth-of-type(1) {
  animation: cssfx-bar-wave-grow var(--duration) -0.45s ease-in-out infinite;
}

.cssfx-bar-wave span:nth-of-type(2) {
  animation: cssfx-bar-wave-grow var(--duration) -0.3s ease-in-out infinite;
}

.cssfx-bar-wave span:nth-of-type(3) {
  animation: cssfx-bar-wave-grow var(--duration) -0.15s ease-in-out infinite;
}

.cssfx-bar-wave span:nth-of-type(4) {
  animation: cssfx-bar-wave-grow var(--duration) ease-in-out infinite;
}

@keyframes cssfx-bar-wave-grow {
  0%,
  100% {
    transform: scaleY(1);
  }

  50% {
    transform: scaleY(2);
  }
}

@tailwind utilities;

@layer base {
  * {
    @apply focus-visible:outline-cyan-600;
  }

  body {
    @apply font-Prompt 
    bg-cyan-600 dark:bg-gray-800
    text-slate-800 dark:text-slate-100;
  }

  h1,
  h2,
  h3,
  h4 {
    @apply font-bold;
  }
  h1 {
    @apply text-4xl;
  }
  h2 {
    @apply text-3xl;
  }
  h3 {
    @apply text-2xl;
  }
  h4 {
    @apply text-xl;
  }

  [type="text"],
  [type="email"],
  [type="url"],
  [type="password"],
  [type="number"],
  [type="date"],
  [type="datetime-local"],
  [type="month"],
  [type="search"],
  [type="tel"],
  [type="time"],
  [type="week"],
  [multiple],
  textarea,
  select {
    @apply border-slate-800 
    placeholder-slate-500 
    focus:border-cyan-400 
    focus:ring-cyan-400 
    focus:ring-offset-1 
    focus:ring-offset-transparent 
    caret-cyan-600;
  }

  /* ===== Scrollbar CSS ===== */
  /* Firefox */
  * {
    scrollbar-width: auto;
    scrollbar-color: rgb(250 204 21) #ffffff;
  }

  /* Chrome, Edge, and Safari */
  *::-webkit-scrollbar {
    width: 6px;
    height: 6px;
  }

  *::-webkit-scrollbar-track {
    background: transparent;
  }

  *::-webkit-scrollbar-thumb {
    background-color: rgb(250 204 21);
    border-radius: 10px;
  }
}

@layer components {
  .clickable-text-cyan {
    @apply font-bold 
    text-cyan-600 dark:text-cyan-500
    hover:text-cyan-500 dark:hover:text-cyan-400
    underline 
    decoration-slice 
  decoration-cyan-600 dark:decoration-cyan-500
  dark:hover:decoration-cyan-300
      cursor-pointer;
  }

  .login-register-button {
    @apply font-Kanit 
    font-bold 
    w-full 
    bg-yellow-400 
    pb-2 pt-3
    text-xl
    rounded shadow-md
    text-slate-800
    mt-4
    active:shadow-none
    focus-visible:outline-cyan-600
    md:mt-8;
  }

  .form-select {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' role='img' style='vertical-align: -0.125em;' width='1em' height='1em' preserveAspectRatio='xMidYMid meet' viewBox='0 0 16 16'%3E%3Cg fill='%23facc15'%3E%3Cpath d='M2 5.56L2.413 5h11.194l.393.54L8.373 11h-.827L2 5.56z'/%3E%3C/g%3E%3C/svg%3E");
    @apply w-64
    mt-1
    rounded-md
    font-semibold
    dark:text-slate-100
    border-slate-800 dark:border-slate-200
    bg-transparent
    shadow-sm
    focus:border-yellow-600 dark:focus:border-yellow-400 
    focus:ring-yellow-600 dark:focus:ring-yellow-400 
    focus:ring-offset-1 
    focus:ring-offset-transparent;
  }

  .my-checkbox {
    @apply rounded 
    bg-transparent
    text-yellow-600 dark:text-yellow-500
    focus:ring-0
    focus:ring-offset-transparent
    focus:ring-transparent;
  }
}

@layer utilities {
  .text-shadow {
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  }

  .text-shadow-md {
    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.08);
  }

  .text-shadow-lg {
    text-shadow: 0 15px 30px rgba(0, 0, 0, 0.11), 0 5px 15px rgba(0, 0, 0, 0.08);
  }

  .text-shadow-none {
    text-shadow: none;
  }
}

